src/test/ui/regions/regions-bounded-method-type-parameters-cross-crate.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-bounded-method-type-parameters-cross-crate.rs:20:7
   |
LL | fn call_bigger_region<'x, 'y>(a: Inv<'x>, b: Inv<'y>) {
   |                                  -------     ------- these two types are declared with different lifetimes...
LL |     // Here the value provided for 'y is 'y, and hence 'y:'x does not hold.
LL |     a.bigger_region(b)
   |       ^^^^^^^^^^^^^ ...but data from `b` flows into `a` here

error: aborting due to previous error

